# linear-adapter-trainer

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  DOCUMENTATION.md  NOTICE  README.md  pyproject.toml
.cla-signatures/v1/: cla.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  dep-scan.yml  license-check.yml  release.yml
examples/: config.toml  linkup_fetch_config.toml  quickstart.py  santander.py  santander_retrieval_demo.ipynb  web_fetch_config.toml
examples/data/: sample_kb.jsonl  santander_kb.jsonl
linear_adapter_trainer/: __init__.py  cli.py  config.py
linear_adapter_trainer/adapter/: __init__.py  data.py  losses.py  model.py  trainer.py
linear_adapter_trainer/dataset/: __init__.py  generator.py  negative_generation.py  negatives.py  query_generation.py  schema.py  splitter.py
linear_adapter_trainer/embeddings/: __init__.py  base.py  hashing.py  openai.py  sentence_transformer.py
linear_adapter_trainer/evaluation/: __init__.py  evaluator.py  metrics.py
linear_adapter_trainer/knowledge_base/: __init__.py  base.py  chunking.py  linkup.py  web.py  web_adapters.py
tests/: test_adapter_model.py  test_cli.py  test_knowledge_base.py  test_linkup_knowledge_base.py  test_metrics.py  test_negative_generation.py  test_negatives.py  test_pipeline.py  test_query_generation.py  test_santander_helper.py  test_splitter.py  test_web_knowledge_base.py
