[project]
name = "linear-adapter-trainer"
version = "0.1.0"
description = "Train linear embedding adapters with triplet loss to align retrieval embeddings with your queries."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Santander AI Lab" },
]
keywords = [
    "embeddings",
    "retrieval",
    "rag",
    "triplet-loss",
    "linear-adapter",
    "fine-tuning",
    "information-retrieval",
    "sentence-transformers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
sentence-transformers = [
    "sentence-transformers>=3.0.0",
]
openai = [
    "openai>=1.40.0",
]
all = [
    "sentence-transformers>=3.0.0",
    "openai>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/SantanderAI/linear-adapter-trainer"
Repository = "https://github.com/SantanderAI/linear-adapter-trainer"
Documentation = "https://github.com/SantanderAI/linear-adapter-trainer/blob/main/DOCUMENTATION.md"
Issues = "https://github.com/SantanderAI/linear-adapter-trainer/issues"

[project.scripts]
linear-adapter = "linear_adapter_trainer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "beautifulsoup4>=4.12.0",
]
# Extras used only by the example notebook (scraping + plotting). Install with:
#   uv sync --group examples
# The ML stack is pinned to a stable, known-good generation: the very latest
# huggingface-hub 1.x + httpx transport is currently flaky for model downloads.
examples = [
    "linear-adapter-trainer[all]",
    "sentence-transformers>=3.0.0,<4.0.0",
    "transformers>=4.41.0,<6.0.0",
    "huggingface-hub>=0.24.0,<1.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "ipykernel>=6.29.0",
    # Makes Python trust the OS certificate store so the OpenAI client works
    # behind a corporate TLS-intercepting proxy (self-signed root CA).
    "truststore>=0.9.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linear_adapter_trainer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
files = ["linear_adapter_trainer"]
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
